// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown List renders a default dropdown list 1`] = `
<ul
  className="dropdown-list"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
  tabIndex="0"
>
  <Button
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list a non-default focused option 1`] = `
<ul
  className="dropdown-list"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
  tabIndex="0"
>
  <Button
    isActive={false}
    isFocused={false}
    key=".0"
    label="1st Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={false}
    isFocused={true}
    key=".1"
    label="2nd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={false}
    isFocused={false}
    key=".2"
    label="3rd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list an active and focused option 1`] = `
<ul
  className="dropdown-list"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
  tabIndex="0"
>
  <Button
    isActive={false}
    isFocused={false}
    key=".0"
    label="1st Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={true}
    isFocused={true}
    key=".1"
    label="2nd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={false}
    isFocused={false}
    key=".2"
    label="3rd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list an active option 1`] = `
<ul
  className="dropdown-list"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
  tabIndex="0"
>
  <Button
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={false}
    isFocused={false}
    key=".1"
    label="2nd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={true}
    isFocused={false}
    key=".2"
    label="3rd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list with a set width 1`] = `
<ul
  className="dropdown-list"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  style={
    Object {
      "width": "440px",
    }
  }
  tabIndex="0"
>
  <Button
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list with multiple children 1`] = `
<ul
  className="dropdown-list"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
  tabIndex="0"
>
  <Button
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={false}
    isFocused={false}
    key=".1"
    label="2nd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
  <Button
    isActive={false}
    isFocused={false}
    key=".2"
    label="3rd Option"
    onClick={[Function]}
    requestClose={[Function]}
  />
</ul>
`;
